# schiller-lib

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  export.sh  export_presets.cfg  flake.nix  project.godot  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: dist.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  test.yml
benches/: benches.rs
docker/: Dockerfile
docker/base/: Dockerfile
docker/cross-win/: Dockerfile
icons/: Add.svg.import  Remove.svg.import  Search.svg.import  Time.svg.import  Tools.svg.import  icon.svg.import
images/: Add.svg.import  Remove.svg.import  Search.svg.import  Time.svg.import  Tools.svg.import  icon.icns  icon.svg.import  icon_reload.svg.import  icon_zoom.svg.import  sbv_db.dia  sbv_db.svg.import
lib/: BookDNBProvider.gd  BookDNBProvider.gdns  BookProvider.gdns  Category.gdns  Date.gdns  Mailer.gdns  Marc21.gdns  Medium.gdns  Project.gdns  Settings.gdns  User.gdns  UserCSVProvider.gd  UserCSVProvider.gdns  UserProvider.gdns  sbv.gdnlib  schiller_lib.gdnlib
lib-view/: .firebaserc  .gitignore  .prettierignore  README.md  bun.lockb  components.json  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.ts  vite.config.ts
lib-view/src/: app.html  app.pcss  app.postcss
lib-view/src/bootstrap/: app.scss  main.ts  variables.scss
lib-view/src/components/basic/: CategorySelect.svelte  Container.svelte  DateField.svelte  Dialog.svelte  List.svelte  Navbar.svelte  Request.svelte  Spinner.svelte  VirtualList.svelte
lib-view/src/components/settings/: EditCategories.svelte  Global.svelte  GlobalSettings.svelte  Local.svelte  LocalSettings.svelte  RemidersModal.svelte  Reminders.svelte  Settings.svelte  SettingsModal.svelte
lib-view/src/lib/: api.ts  index.ts  store.ts  util.ts  utils.ts
lib-view/src/lib/components/custom/: DeleteDialog.svelte  (+1 more)
lib-view/src/lib/i18n/: index.ts
lib-view/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts  Layout.svelte  Reminder.svelte
lib-view/src/routes/books/: +page.svelte  BookActions.svelte  BookDialog.svelte  BookDisplay.svelte  BookItem.svelte  BookList.svelte  BookSearch.svelte  BookSearchHeader.svelte  BookSelect.svelte  BookView.svelte  DeleteDialog.svelte  LendDialog.svelte  LendModal.svelte  MailDialog.svelte  MailModal.svelte  ReleaseDialog.svelte  ReserveDialog.svelte  ReserveModal.svelte  ReturnDialog.svelte
lib-view/src/routes/borrowed/: +page.svelte  BorrowedList.svelte
lib-view/src/routes/info/: +page.svelte
lib-view/src/routes/overdues/: +page.svelte
lib-view/src/routes/settings/: +page.svelte  EditCategory.svelte  Global.svelte  Local.svelte
lib-view/src/routes/users/: +page.svelte  DeleteDialog.svelte  UserActions.svelte  UserDialog.svelte  UserDisplay.svelte  UserItem.svelte  UserList.svelte  UserSearch.svelte  UserSearchHeader.svelte  UserSelect.svelte  UserView.svelte
plugins/: BookProvider.gd  UserProvider.gd
src/: error.rs  fuzzy.rs  isbn.rs  lib.rs  mail.rs  main.rs  util.rs
src/api/: book_provider.rs  category.rs  date.rs  debug.rs  error.rs  mailer.rs  marc21.rs  medium.rs  mod.rs  project.rs  settings.rs  user.rs  user_provider.rs
src/db/: book.rs  category.rs  data.rs  legacy.rs  lending.rs  medium.rs  migrate.rs  mod.rs  raw.rs  rental.rs  settings.rs  sorted.rs  stats.rs  structure.rs  user.rs
src/mail/: mod.rs
src/provider/: dnb.rs  marc21.rs  mod.rs  user.rs
src/provider/book/: dnb.rs  mod.rs
src/provider/user/: csv.rs  mod.rs
src/request/: mod.rs
src/request/book/: dnb.rs  mod.rs
src/server/: api.rs  auth.rs  mod.rs
test/: Test.gd  TestBookProvider.gd  TestUserProvider.gd  demo.json
test/cert/: gen.sh
test/csv/: users.csv
test/data/cert/: gen.sh
test/data/dnb/: dnb-response_9783570303337.xml
test/dnb/: dnb-response_3440040585.xml  dnb-response_3468131208.xml  dnb-response_9783060016150.xml  dnb-response_9783608939774.xml
translations/: convert_i18n.py  convert_tr.py  translations.csv  translations.csv.import  translations.de.translation  translations.en.translation
ui/: AddMedium.tscn  Book.gd  Book.tscn  BookPanel.gd  CategoryDialog.gd  CategoryDialog.tscn  CategorySelect.gd  ConfirmDialog.gd  Dialogs.gd  EditCategoriesButton.gd  LendDialog.gd  LendDialog.tscn  LendUserSearch.gd  LendingDialogAddUser.gd  MailDialog.gd  MailDialog.tscn  Main.gd  Main.tscn  MainTabs.gd  MediaTab.gd  Medium.gd  Medium.tscn  MediumPanel.gd  Menu.gd  MenuEdit.gd  MenuFile.gd  MessageDialog.gd  NamedTabs.gd  ObjectList.gd  Overdues.gd  Overdues.tscn  OverduesText.gd  OverduesTree.gd  Persistant.gd  ProgressIndicator.gd  ProjectDialog.gd  SearchBooks.gd  SearchBooks.tscn  SearchMedia.gd  SearchMedia.tscn  (+17 more)
ui/book/: AuthorList.gd  Book.gd  Book.tscn  BookPane.gd  BookPane.tscn  BookPanel.gd  BookSearch.gd  BookTab.tscn  BookView.gd  BookView.tscn  BooksTab.gd  CategorySelect.gd  LendDialog.gd  LendDialog.tscn  SearchBooks.gd  SearchBooks.tscn  SearchStatus.gd
ui/info/: About.gd  InfoLabel.gd  InfoTab.tscn  Stats.gd
ui/overdues/: Overdues.tscn  OverduesTab.gd  OverduesTab.tscn  OverduesTree.gd
ui/settings/: CategoryDialog.gd  CategoryDialog.tscn  EditCategoriesButton.gd  MailView.gd  Settings.gd  Settings.tscn  SettingsDialog.tscn  UserUpdateRoles.gd
ui/test/: Test.gd  Test.tscn  TestUtil.gd
ui/user/: SearchUsers.gd  SearchUsers.tscn  User.gd  User.tscn  UserPane.gd  UserSearch.gd  UserTab.gd  UserTab.tscn  UserView.gd  UserView.tscn
ui/util/: NamedTabs.gd  ObjectList.gd  ProgressIndicator.gd  SpinBoxTr.gd  ThemeProperty.gd  Util.gd
(+8 files in other folders)
