[package]
name = "schiller-lib"
description = "Schiller library software"
version = "0.9.0"
authors = ["Lars Wrenger <lars@wrenger.net>", "Nils Wrenger <nils@wrenger.net>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/wrenger/schiller-lib"
publish = false

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"]}
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
email_address = "0.2"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1" }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
oauth2 = { version = "4.4", default-features = false, features = ["rustls-tls"] }
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
roxmltree = "0.19"
rusqlite = { version = "0.30", features = ["bundled"], optional = true }
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.24"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-deflate"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"

[features]
default = []
sqlite = ["rusqlite"]
