[package]
name = "schiller-lib"
description = "Schiller library software"
version = "0.11.0"
authors = ["Lars Wrenger <lars@wrenger.net>", "Nils Wrenger <nils@wrenger.net>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/wrenger/schiller-lib"
publish = false
default-run = "schiller-lib"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
axum = { version = "0.8.1", default-features = false, features = [
    "json",
    "query",
    "tokio",
    "tower-log",
    "tracing",
] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
email_address = "0.2"
gluer = "0.8.3"
hyper = "1.5"
hyper-util = "0.1"
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
] }
oauth2 = { version = "5.0.0-rc.1" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = [
    "fs",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-rustls = { version = "0.26", default-features = false }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = [
    "fs",
    "trace",
    "compression-deflate",
] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"

[dev-dependencies]
criterion = { version = "0.5" }

[features]
default = []
sqlite = ["rusqlite"]
